--- a/assignment6/Dockerfile
+++ b/assignment6/Dockerfile
@@ -6,7 +6,8 @@ COPY . .
 
 EXPOSE 8080
 
-RUN sudo apt install sqlite3
+RUN apt update && apt install -y sqlite3
+
 RUN go build -o main main.go
 
 CMD [ "./main" ]
